# fastapi_zero

./: .gitignore  pyproject.toml
fastapi_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 3f67013f8a3b_create_todos_table.py  6e20fcafa034_add_created_at_and_updated_at_to_todos.py  c073738a177e_assincrono.py  c4c48c7a654c_add_updated_at_to_users.py  e27378c78281_crreate_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_user.py
